<resources>
    <string name="welcome_setup_message">Let\’s get you setup\nWhat shall I call you?</string>
    <string name="welcome_alias_suggestion">Joel Smith</string>
    <string name="welcome_agree_to_terms">I agree to the Terms Of Service and Privacy Policy</string>
    <string name="fingerprint_use_title">Use your fingerprint for signing transactions</string>
    <string name="fingerprint_use_description">Add an additional layer of security to the app by requiring your fingerprint for signing transactions.\n\nYou can always skip this step and set it up later in  settings.</string>
    <string name="goto_homescreen">Go to Home Screen</string>
    <string name="all_set_title">Your All Set!</string>
    <string name="all_set_description">Congratulations on taking the first step towards your financial sovernty.\n\nOmoir Wallet™ gives you the tools you need to take your self-custody journey to the next level. Get started by creating a new wallet or navigating to the main screen.</string>
    <string name="homescreen_wallet_limit_reached">Cannot create more than %1$s wallets for free version</string>
    <string name="pro_homescreen_full_balance_title">Total Balance</string>
    <string name="homescreen_greeting_1">Good Morning</string>
    <string name="homescreen_greeting_2">Good Afternoon</string>
    <string name="homescreen_greeting_3">Good Evening</string>
    <string name="homescreen_greeting_4">Hello</string>
    <string name="pro_homescreen_average_price_dialog_title">Average Price</string>
    <string name="pro_homescreen_unreaized_profit_dialog_title">Unrealized Profit</string>
    <string name="pro_homescreen_wallet_limit_reached">Cannot create more than %1$s wallets for pro version</string>
    <string name="pro_homescreen_average_price_dialog_message">The average price that you acquired this asset at. This is calculated based on the total amount of bitcoin the wallet received and the relative price of the asset at the time it was received.</string>
    <string name="pro_homescreen_unrealized_profit_dialog_message">The total unrealized or \"un-sold\" value of your holdings. This is calculated based on the current average price of your holdings times the total amount of \"units\" or coins within the wallet.</string>
    <string name="create_pin_tip_message">Create a pin up to 8 digits</string>
    <string name="incorrect_pin_length_tip_message">Pin must be at least 4 digits</string>
    <string name="re_enter_pin_tip_message">Re-enter new pin</string>
    <string name="wrong_input_tip_message">Pin code does not match</string>
    <string name="pin_check_success_tip_message">Pin is correct</string>
    <string name="enter_pin_to_unlock_message">Enter pin to unlock</string>
    <string name="premium_subscriptions_benefits_title">Benefits of getting a pro subscription</string>
    <string name="premium_subscriptions_benefits_1">Updated UI</string>
    <string name="premium_subscriptions_benefits_2">Wallet Balance History</string>
    <string name="premium_subscriptions_benefits_3">Extended Bitcoin Network Data</string>
    <string name="premium_subscriptions_benefits_4">Asset Transfer Protocol</string>
    <string name="premium_subscriptions_benefits_5">Transaction Exporting</string>
    <string name="premium_subscriptions_benefits_6">Create up to 10 wallets</string>
    <string name="premium_subscriptions_benefits_7">Unlimited Hidden Wallets</string>
    <string name="premium_subscriptions_benefits_8">Wallet Usage Reports</string>
    <string name="premium_subscriptions_restore">Restore Purchase</string>
    <string name="premium_subscriptions_pricing_title">The Pricing Structure</string>
    <string name="premium_subscriptions_subscribe">Upgrade to Pro</string>
    <string name="premium_subscriptions_load_error">Failed to load subscription information, please try again.</string>
    <string name="premium_subscriptions_success">Pro Subscription Enabled</string>
    <string name="premium_subscriptions_update_success">Subscription Updated</string>
    <string name="premium_subscriptions_update_error">There was an issue activating your subscription</string>
    <string name="premium_subscriptions_cancelled_purchase">Purchase cancelled.</string>
    <string name="premium_subscriptions_failed_purchase">Purchase Failed: %1$s</string>
    <string name="premium_subscription_type_yearly">Annual</string>
    <string name="premium_subscription_type_monthly">Monthly</string>
    <string name="premium_subscription_annual_price">%1$s/year</string>
    <string name="premium_subscription_monthly_price_conversion">or ~%1$s/month</string>
    <string name="premium_subscription_monthly_price_savings">Save %1$s%%</string>
    <string name="premium_subscription_monthly_price">%1$s/month</string>
    <string name="premium_subscription_switch_to_free">Premium subscription not found, switching to free version.</string>
    <string name="premium_subscription_switch_to_pro">Premium subscription found, switching to pro version.</string>
    <string name="premium_subscription_info_title">Premium Subscription</string>
    <string name="premium_subscription_info_1_title">Renewal Type</string>
    <string name="premium_subscription_info_2_title">Good Until</string>
    <string name="premium_subscription_info_3_title">Status</string>
    <string name="premium_subscription_renewal_type_1">Monthly</string>
    <string name="premium_subscription_renewal_type_2">Annual</string>
    <string name="premium_subscription_renewal_type_3">Promotional</string>
    <string name="premium_subscription_state_type_1">Active</string>
    <string name="premium_subscription_state_type_2">Inactive Until Renewal</string>
    <string name="premium_subscription_expired_state">Expired</string>
    <string name="premium_subscription_manage">Manage Subscription</string>
    <string name="premium_subscription_switch_annual">Switch To Annual</string>
    <string name="premium_subscription_switch_monthly">Switch To Monthly</string>
    <string name="premium_subscription_not_found">No active subscription found</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_security">Security</string>
    <string name="settings_category_subscriptions">Subscriptions</string>
    <string name="settings_category_wallets">Wallets</string>
    <string name="settings_category_misc">Miscellaneous</string>
    <string name="settings_option_bitcoin_unit">Bitcoin Unit</string>
    <string name="settings_option_set_name">Change Name</string>
    <string name="settings_option_update_pin">Update Pin</string>
    <string name="settings_option_max_pin_attempts">Set Max Pin Attempts</string>
    <string name="settings_option_view_wallets">View Wallets</string>
    <string name="settings_option_view_wallets_description">Manage your bitcoin wallets</string>
    <string name="settings_option_view_about_us">About us</string>
    <string name="settings_option_view_about_us_description">Privacy Policy and Terms of Service</string>
    <string name="settings_option_view_credits">Credits</string>
    <string name="settings_option_view_credits_description">Libraries Used &amp; Notable Credits</string>
    <string name="settings_option_view_help">Help</string>
    <string name="settings_option_developer">Developer Options</string>
    <string name="settings_option_developer_subtitle">Change internal app behavior and settings</string>
    <string name="settings_option_wipe_data_title">Erase All Data</string>
    <string name="settings_option_wipe_data_button">Erase Data</string>
    <string name="settings_option_wipe_data_subtitle">Are you sure you want to wipe all data from Omoir Wallet™? This action is irreversible, please be sure you have backed up all your seed phrases.</string>
    <string name="settings_option_view_wipe_data">Wipe All Data</string>
    <string name="settings_option_view_build_version">Build Version</string>
    <string name="settings_option_view_help_description">Get Help and Learn More</string>
    <string name="settings_option_view_address_book">Address Book</string>
    <string name="settings_option_view_address_book_description">Save your frequently used addresses</string>
    <string name="settings_option_view_accounts">Accounts</string>
    <string name="settings_option_view_accounts_description">Create accounts for your wallets</string>
    <string name="settings_option_view_address_min_confirmations">Minimum Confirmations</string>
    <string name="settings_option_gap_limit">Gap Limit</string>
    <string name="settings_option_view_address_min_confirmations_description">Set the minimum confirmations needed for incoming/outgoing transactions</string>
    <string name="bitcoin_unit_1">Bitcoin (BTC)</string>
    <string name="bitcoin_unit_2">Satoshi (SAT)</string>
    <string name="bitcoin_unit_3">Fiat Currency ($)</string>
    <string name="credits_tech_stack_title">Tech Stack</string>
    <string name="credits_acknowledgement_1_title">UI Designer</string>
    <string name="credits_acknowledgement_1_subtitle"><b>imraan_zaack</b> on fiver</string>
    <string name="credits_acknowledgement_2_title">Bitcoin Api</string>
    <string name="credits_acknowledgement_2_subtitle">bitcoin-kit-android</string>
    <string name="credits_acknowledgement_3_title">QR Code Api</string>
    <string name="credits_acknowledgement_3_subtitle">zxing-android + google vision</string>
    <string name="credits_acknowledgement_4_title">Database Management</string>
    <string name="credits_acknowledgement_4_subtitle">androidx-room</string>
    <string name="credits_acknowledgement_5_title">Network Api</string>
    <string name="credits_acknowledgement_5_subtitle">retrofit2 + okhttp3</string>
    <string name="wallet_settings_sync_type_title">Sync Type</string>
    <string name="wallet_settings_sync_type_subtitle">Change how your wallet syncs with the bitcoin network. Api syncing is significantly faster however if you are looking for a more secure solution.\n\nOmoir Wallet™ allows you to sync your wallet directly with bitcoin node operators. Please keep in mind that enabling core syncing may be significantly slower.</string>
    <string name="wallet_settings_sync_type_api">Api Based Syncing</string>
    <string name="wallet_settings_sync_type_core">Core Based Syncing</string>
    <string name="report_details_time_period_1">Last Week</string>
    <string name="report_details_time_period_2">Last Month</string>
    <string name="report_details_time_period_3">Last 6 Months</string>
    <string name="report_details_time_period_4">Last Year</string>
    <string name="report_details_time_period_5">All Time</string>
    <string name="report_details_filter_title">Select A Time Period</string>
    <string name="report_type_inflow_title">Inflow Report</string>
    <string name="report_type_inflow_subtitle">See your income</string>
    <string name="report_type_outflow_title">Outflow Report</string>
    <string name="report_type_net_inflow_title">Net Inflow Report</string>
    <string name="report_type_net_inflow_subtitle">See your net income</string>
    <string name="report_type_outflow_subtitle">See how much you spent</string>
    <string name="report_type_fees_title">Tx Fee Report</string>
    <string name="report_type_fees_subtitle">See how much you paid in fees</string>
    <string name="report_type_utx_distro_title">Coin Distribution</string>
    <string name="report_type_utx_distro_subtitle">See how your utxo\'s are distributed throughout the wallet</string>
    <string name="create_wallet_fragment_label">Create A Wallet</string>
    <string name="backup_wallet_fragment_label">Backup Your Wallet</string>
    <string name="seed_phrase_fragment_label">Your Seed Phrase</string>
    <string name="name_wallet_fragment_label">Name Your Wallet</string>
    <string name="wallet_created_fragment_label">Wallet Created</string>
</resources>