<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.intuisoft.plaid.androidwrappers.PasscodeView
        android:id="@+id/passcodeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:trackIncorrectAttempts="true"
        app:firstInputTip="@string/create_pin_tip_message"
        app:wrongLengthTip="@string/incorrect_pin_length_tip_message"
        app:secondInputTip="@string/re_enter_pin_tip_message"
        app:wrongInputTip="@string/wrong_input_tip_message"
        app:correctInputTip="@string/pin_check_success_tip_message"
        app:correctStateColor="@color/success_color"
        app:wrongStateColor="@color/error_color"
        app:normalStateColor="?attr/colorPrimary"
        app:numberTextColor="@color/alt_black"
        app:tipTextColor="@color/black"
        app:passcodeLength="8"
        app:passcodeViewType="set_passcode"/>

</androidx.constraintlayout.widget.ConstraintLayout>