<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <include
        android:id="@+id/header"
        layout="@layout/onboarding_flow_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.intuisoft.plaid.androidwrappers.PasscodeView
        android:id="@+id/passcodeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:firstInputTip="@string/create_pin_tip_message"
        app:wrongLengthTip="@string/incorrect_pin_length_tip_message"
        app:secondInputTip="@string/re_enter_pin_tip_message"
        app:wrongInputTip="@string/wrong_input_tip_message"
        app:correctInputTip="@string/pin_check_success_tip_message"
        app:correctStateColor="@color/success_color"
        app:wrongStateColor="@color/error_color"
        app:normalStateColor="?attr/colorPrimary"
        app:numberTextColor="@color/alt_black"
        app:tipTextColor="@color/black"
        app:passcodeLength="8"
        app:passcodeViewType="set_passcode"/>


    <include
        android:id="@+id/footer"
        android:visibility="gone"
        layout="@layout/onboarding_flow_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>