<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_wallet_flow_graph"
    app:startDestination="@+id/createWalletFragment">

    <fragment
        android:id="@+id/createWalletFragment"
        android:name="com.intuisoft.plaid.features.createwallet.ui.CreateWalletFragment"
        android:label="@string/create_wallet_fragment_label"
        tools:layout="@layout/fragment_create_import_wallet">

        <action
            android:id="@+id/action_CreateWalletFragment_to_BackupWalletFragment"
            app:destination="@+id/backupWalletFragment" />
    </fragment>

    <fragment
        android:id="@+id/backupWalletFragment"
        android:name="com.intuisoft.plaid.features.createwallet.ui.BackupYourWalletFragment"
        android:label="@string/backup_wallet_fragment_label"
        tools:layout="@layout/fragment_backup_wallet">

        <action
            android:id="@+id/action_BackupWalletFragment_to_SeedPhraseFragment"
            app:destination="@+id/seedPhraseFragment" />
    </fragment>

    <fragment
        android:id="@+id/seedPhraseFragment"
        android:name="com.intuisoft.plaid.features.createwallet.ui.SeedPhraseFragment"
        android:label="@string/seed_phrase_fragment_label"
        tools:layout="@layout/fragment_seed_phrase">

        <action
            android:id="@+id/action_SeedPhraseFragment_to_NameWalletFragment"
            app:destination="@+id/nameWalletFragment" />
    </fragment>

    <fragment
        android:id="@+id/nameWalletFragment"
        android:name="com.intuisoft.plaid.features.createwallet.ui.NameYourWalletFragment"
        android:label="@string/name_wallet_fragment_label"
        tools:layout="@layout/fragment_name_wallet">

        <action
            android:id="@+id/action_NameWalletFragment_to_WalletCreatedFragment"
            app:destination="@+id/walletCreatedFragment"
            app:popUpTo="@id/nameWalletFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/walletCreatedFragment"
        android:name="com.intuisoft.plaid.features.createwallet.ui.WalletCreatedFragment"
        android:label="@string/wallet_created_fragment_label"
        tools:layout="@layout/fragment_wallet_created">

    </fragment>

    <action
        android:id="@+id/action_global_pinFragment"
        app:destination="@+id/pinFragment" />

    <action
        android:id="@+id/action_global_homescreenFragment"
        app:destination="@+id/homescreen_flow_graph" />

</navigation>