<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.intuisoft.plaid.androidwrappers.SettingsItemView
        android:id="@+id/btc_unit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:settings_variant="radio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:item_title="@string/bitcoin_unit_1"
        app:show_radio="true"/>

    <com.intuisoft.plaid.androidwrappers.SettingsItemView
        android:id="@+id/btc_unit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:settings_variant="radio"
        android:layout_marginTop="@dimen/horizontal_padding_size"
        app:layout_constraintTop_toBottomOf="@id/btc_unit_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:item_title="@string/bitcoin_unit_2"
        app:show_radio="true"/>

    <com.intuisoft.plaid.androidwrappers.SettingsItemView
        android:id="@+id/btc_unit_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:settings_variant="radio"
        android:layout_marginTop="@dimen/horizontal_padding_size"
        app:layout_constraintTop_toBottomOf="@id/btc_unit_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:item_title="@string/bitcoin_unit_3"
        app:show_radio="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>